--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>AB Weather App</title>
 </head>
 <body>
-    <div class="main-container rounded-2xl mt-10 flex flex-col items-center justify-center w-2/4 m-auto  sm:w-full">
+    <div class="main-container rounded-2xl flex flex-col items-center justify-center w-2/4 m-auto  sm:w-full sm:m-0">
 
    
     <h1 class="heading text-7xl m-4" >Weather App</h1>
