--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>AB Weather App</title>
 </head>
 <body>
-    <div class="main-container rounded-2xl flex flex-col items-center justify-center w-2/4 m-auto  sm:w-full sm:m-0">
+    <div class="main-container rounded-2xl flex flex-col items-center justify-center  m-auto  sm:w-full sm:m-0">
 
    
     <h1 class="heading text-7xl m-4" >Weather App</h1>
@@ -25,22 +25,22 @@
         <label>Country: <span id="countryName"></span></label>
     </div>
     <div class="details w-3/4 flex flex-wrap justify-center align-middle mt-6">
-        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl">
+        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl" id="miniBox">
             <h1 style="font-size: 1.2rem;">Temp</h1>
-            <i class="fa-solid fa-temperature-three-quarters" id="temperature"> </i> 
+            <i class="fa-solid fa-temperature-three-quarters" id="temperature"></i> 
             <h1 style="font-size: 1.3rem;">Celsius</h1>
         </span>
-        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl">
+        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl" id="miniBox">
             <h1 style="font-size: 1.2rem;">Feels Like</h1>
             <i class="fa-solid fa-sun" id="feelsLike"> </i> 
             <h1 style="font-size: 1.3rem;">Celsius</h1>
         </span>
-        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl">
+        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl" id="miniBox">
             <h1 style="font-size: 1.2rem;">Wind Speed</h1>
             <i class="fa-solid fa-wind" id="windSpeed"> </i> 
             <h1 style="font-size: 1.3rem;">m/s</h1>
         </span>
-        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl">
+        <span class="w-44 h-36 bg-teal-300 text-2xl m-6 flex flex-col font-medium items-center justify-center rounded-3xl" id="miniBox">
             <h1 style="font-size: 1.2rem;">Humidity</h1>
             <i class="fa-solid fa-droplet" id="humidity"> </i> 
             <h1 style="font-size: 1.3rem;">%</h1>
